Fix sonar findings / formatting